# yggman

./: .gitignore  Cargo.toml  config.example.toml
src/: agent.rs  cli.rs  error.rs  main.rs  node_manager.rs  settings_manager.rs  websocket_state.rs
src/config/: mod.rs
src/core/: app.rs  context.rs  mod.rs  module.rs
src/database/: connection.rs  mod.rs
src/database/entities/: mod.rs  node.rs  settings.rs
src/modules/: example.rs  mod.rs  web.rs  websocket.rs
src/yggdrasil/: mod.rs
static/: edit.html  index.html
